fix: style issues in truncated task body
- `a` not highlighted on hover
- mismatching baselines between elements
- `code` was too small

--- a/src/index.css
+++ b/src/index.css
@@ -36,24 +36,17 @@
   }
 }
 
+.task-body-truncated code {
+  @apply px-1 py-0.5 overflow-hidden rounded-sm relative top-1 text-inherit text-[0.7rem] leading-[0.85rem];
+  /* 1 step smaller than text-xs */
+}
+
+.shiki {
+  @apply min-w-0 py-1 px-4 rounded-lg overflow-scroll;
+}
+
 .shiki > code {
   @apply text-xs;
-}
-
-.task-body-truncated * {
-  @apply inline-block text-xs font-normal text-foreground-500;
-}
-
-.task-body-truncated code {
-  @apply px-1 py-0.5 overflow-hidden;
-  /* 1 step smaller than text-xs */
-  font-size: 0.65rem;
-  line-height: 0.8rem;
-}
-
-/* .shiki elements that are not children of .task-body-truncated */
-.shiki:not(.task-body-truncated *) {
-  @apply min-w-0 py-1 px-4 rounded-lg overflow-scroll;
 }
 
 .task-modal-name * {
